fix: change overflow property in metrics section to hidden for better layout

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -30,7 +30,7 @@
       display: flex;
       flex-direction: column;
       height: 250px;
-      overflow: auto;
+      overflow: hidden;
 
       h2 {
         font-size: 14px;
